# HW_FastAPI

./: .gitignore  app.py  index.html  main.py  models.py  pyproject.toml  requerements  requerements.txt
css/: Starter_template.css
routers/: __init__.py  book_router.py  index_routers.py  movie_router.py
templates/: about.html  base.html  book.html  index.html
tests/: conftest.py  pytest.ini
tests/integration_tests/: conftest.py  test_book_router.py  test_index_router.py
